fix bugs with setting ships and remove a matrix storage system

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,8 +107,9 @@ button:hover {
     border: 1px solid #81d4fa;
 }
 
-.row {
-    display: flex;
+.grid {
+    display: grid;
+    grid-template-columns: repeat(7, 52px);
     gap: 2px;
 }
 
